--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ footer{
 
 <!-- HERO -->
 <div class="hero">
-  <img src="C:\Users\ariel\OneDrive\index.html\imagens\eu.jpg" alt="Foto" class="avatar">
+  <img src="Portfl-lio/blob/main/imagens/eu.jpg" alt="Foto" class="avatar">
   <h1>Desenvolvedora Web</h1>
   <p>
     Sites, landing pages e sistemas web modernos, responsivos
@@ -330,4 +330,5 @@ footer{
 </footer>
 
 </body>
+
 </html>
