--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="C:\Users\ariel\OneDrive\index.html\imagens\xo.jpg" alt="Site Soromix">
+        <img src="Portfl-lio/blob/main/imagens/xo.jpg" alt="Site Soromix">
       </div>
       <div class="project-content">
         <h3>Soromix</h3>
@@ -253,7 +253,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="C:\Users\ariel\OneDrive\index.html\imagens\cursos.jpg"  alt="Pro Inclusão">
+        <img src="Portfl-lio/blob/main/imagens/cursos.jpg"  alt="Pro Inclusão">
       </div>
       <div class="project-content">
         <h3>Pro Inclusão</h3>
@@ -265,7 +265,7 @@ footer{
     </div>
  <div class="project-card">
       <div class="project-img">
-        <img src="C:\Users\ariel\OneDrive\index.html\imagens\inves.jpg"alt="Vanarts Decor">
+        <img src="Portfl-lio/blob/main/imagens/inves.jpg" alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Tibi Investimentos</h3>
@@ -277,7 +277,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="C:\Users\ariel\OneDrive\index.html\imagens\var.jpg" alt="Vanarts Decor">
+        <img src="Portfl-lio/blob/main/imagens/var.jpg" alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Vanarts Decor</h3>
@@ -291,7 +291,7 @@ footer{
  
     <div class="project-card">
       <div class="project-img">
-        <img src="C:\Users\ariel\OneDrive\index.html\imagens\loja.jpg" alt="Loja">
+        <img src="Portfl-lio/blob/main/imagens/loja.jpg" alt="Loja">
       </div>
       <div class="project-content">
         <h3>Loja feminina</h3>
@@ -299,10 +299,7 @@ footer{
           Loja virtual moderna e simples.
         </p>
       </div>
-    </div>
- 
-	  
-     
+	</div>
   
 </section>
 
@@ -332,3 +329,4 @@ footer{
 </body>
 
 </html>
+
