--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ footer{
 
 <!-- HERO -->
 <div class="hero">
-  <img src="Portfl-lio/blob/main/imagens/eu.jpg" alt="Foto" class="avatar">
+  <img src="Portfl-lio\blob\main\imagens\eu.jpg" alt="Foto" class="avatar">
   <h1>Desenvolvedora Web</h1>
   <p>
     Sites, landing pages e sistemas web modernos, responsivos
@@ -329,4 +329,5 @@ footer{
 </body>
 
 </html>
+
 
