--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body{
   color:var(--dark);
 }
 
-/* HERO */
+
 .hero{
   background:linear-gradient(rgba(0,0,0,25),rgba(0,0,0,25)),
   url("img/hero.jpg") center/cover no-repeat;
@@ -85,7 +85,6 @@ body{
   text-decoration:none;
 }
 
-/* SECTIONS */
 section{
   max-width:1200px;
   margin:auto;
@@ -98,7 +97,7 @@ section h2{
   margin-bottom:20px;
 }
 
-/* SOBRE */
+
 .about{
   text-align:center;
   max-width:900px;
@@ -107,7 +106,7 @@ section h2{
   font-size:1.05rem;
 }
 
-/* PROJETOS */
+
 .projects{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
@@ -167,13 +166,12 @@ section h2{
   font-weight:500;
 }
 
-/* CTA */
+
 .cta{
   background:var(--primary);
   color:#fff;
   text-align:center;
   padding:80px 20px;
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
 }
 
 .cta a{
@@ -187,7 +185,7 @@ section h2{
   text-decoration:none;
 }
 
-/* FOOTER */
+
 footer{
   background:#000000;
   color:#aaa;
@@ -199,16 +197,14 @@ footer{
 @media(max-width:600px){
   .hero h1{font-size:2rem;}
 }
-
-
 </style>
 </head>
 
 <body>
 
-<!-- HERO -->
+
 <div class="hero">
-  <img src="Portfl-lio\blob\main\imagens\eu.jpg" alt="Foto" class="avatar">
+  <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\eu.jpg" alt="Foto" class="avatar">
   <h1>Desenvolvedora Web</h1>
   <p>
     Sites, landing pages e sistemas web modernos, responsivos
@@ -217,7 +213,7 @@ footer{
  
 </div>
 
-<!-- SOBRE -->
+
 <section>
   <h2>Sobre Mim</h2>
   <p class="about">
@@ -232,7 +228,6 @@ footer{
   </p>
 </section>
 
-<!-- PROJETOS -->
 <section>
   <h2>Projetos em Destaque</h2>
 
@@ -240,7 +235,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="Portfl-lio/blob/main/imagens/xo.jpg" alt="Site Soromix">
+        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\xo.jpg"alt="Site Soromix">
       </div>
       <div class="project-content">
         <h3>Soromix</h3>
@@ -253,7 +248,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="Portfl-lio/blob/main/imagens/cursos.jpg"  alt="Pro Inclusão">
+        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\cursos.jpg"  alt="Pro Inclusão">
       </div>
       <div class="project-content">
         <h3>Pro Inclusão</h3>
@@ -265,7 +260,7 @@ footer{
     </div>
  <div class="project-card">
       <div class="project-img">
-        <img src="Portfl-lio/blob/main/imagens/inves.jpg" alt="Vanarts Decor">
+        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\inves.jpg"alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Tibi Investimentos</h3>
@@ -277,7 +272,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="Portfl-lio/blob/main/imagens/var.jpg" alt="Vanarts Decor">
+        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\var.jpg" alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Vanarts Decor</h3>
@@ -287,11 +282,9 @@ footer{
         </p>
       </div>
     </div>
- 
- 
     <div class="project-card">
       <div class="project-img">
-        <img src="Portfl-lio/blob/main/imagens/loja.jpg" alt="Loja">
+        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\loja.jpg" alt="Loja">
       </div>
       <div class="project-content">
         <h3>Loja feminina</h3>
@@ -299,11 +292,8 @@ footer{
           Loja virtual moderna e simples.
         </p>
       </div>
-	</div>
-  
+    </div>
 </section>
-
-<!-- TECNOLOGIAS -->
 <section>
   <h2>Tecnologias</h2>
   <div class="tech">
@@ -315,7 +305,6 @@ footer{
   </div>
 </section>
 
-<!-- CTA -->
 <div class="cta" id="contato">
   <h2>Vamos Trabalhar Juntos?</h2>
   <p>Entre em contato e leve seu projeto para outro nível.</p>
@@ -327,7 +316,4 @@ footer{
 </footer>
 
 </body>
-
 </html>
-
-
