--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ section h2{
   color:var(--gray);
 }
 
-/* TECNOLOGIAS */
+
 .tech{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
@@ -204,7 +204,7 @@ footer{
 
 
 <div class="hero">
-  <img src="Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\eu.jpg" alt="Foto" class="avatar">
+  <img src="imagens\eu.jpg" alt="Foto" class="avatar">
   <h1>Desenvolvedora Web</h1>
   <p>
     Sites, landing pages e sistemas web modernos, responsivos
@@ -235,7 +235,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\xo.jpg"alt="Site Soromix">
+        <img src="imagens\xo.jpg" alt="Site Soromix">
       </div>
       <div class="project-content">
         <h3>Soromix</h3>
@@ -248,7 +248,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\cursos.jpg"  alt="Pro Inclusão">
+        <img src="imagens\cursos.jpg"  alt="Pro Inclusão">
       </div>
       <div class="project-content">
         <h3>Pro Inclusão</h3>
@@ -260,7 +260,7 @@ footer{
     </div>
  <div class="project-card">
       <div class="project-img">
-        <img src="Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\inves.jpg"alt="Vanarts Decor">
+        <img src="imagens\inves.jpg" alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Tibi Investimentos</h3>
@@ -272,7 +272,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\var.jpg" alt="Vanarts Decor">
+        <img src="imagens\var.jpg" alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Vanarts Decor</h3>
@@ -284,7 +284,7 @@ footer{
     </div>
     <div class="project-card">
       <div class="project-img">
-        <img src="Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\loja.jpg" alt="Loja">
+        <img src="imagens\loja.jpg" alt="Loja">
       </div>
       <div class="project-content">
         <h3>Loja feminina</h3>
@@ -317,4 +317,5 @@ footer{
 
 </body>
 </html>
+
 
