--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+<link
+	href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel ="stylesheet">
 <head>
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 <style>
+
+	
 .titulo-container {
   display: flex;
   align-items: center;
@@ -65,6 +68,7 @@ body{
 .hero h1{
   font-size:2.8rem;
   margin-bottom:15px;
+font-family:'Poppins',sans-serif;
 }
 
 .hero p{
@@ -214,11 +218,14 @@ footer{
 </div>
 
 
-<section>
+<section id="sobre">
   <h2>Sobre Mim</h2>
   <p class="about">
    Desenvolvo sites responsivos, landing pages e sistemas web com foco em performance, usabilidade e estética moderna, utilizando tecnologias como HTML, CSS, JavaScript, PHP, WordPress (com Elementor), além de integração com APIs REST e noções de frameworks.
   </p>
+</section>
+	
+<section id="formacao">
  <h2>Formação</h2>
   <p class="about">
    Técnico em informática para internet(2019)<br>
@@ -228,12 +235,11 @@ footer{
   </p>
 </section>
 
-<section>
+<section >
   <h2>Projetos em Destaque</h2>
 
   <div class="projects">
-
-    <div class="project-card">
+ <div class="project-card">
       <div class="project-img">
         <img src="imagens\xo.jpg" alt="Site Soromix">
       </div>
@@ -317,5 +323,6 @@ footer{
 
 </body>
 </html>
+
 
 
