--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<link
-	href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel ="stylesheet">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 
 <style>
@@ -52,31 +52,9 @@
 }
 
 body{
-  background:#fff;
-  color:var(--dark);
+ padding-top:80px;
 }
 
-
-.hero{
-  background:linear-gradient(rgba(0,0,0,25),rgba(0,0,0,25)),
-  url("img/hero.jpg") center/cover no-repeat;
-  color:#fff;
-  padding:100px 20px;
-  text-align:center;
-}
-
-.hero h1{
-  font-size:2.8rem;
-  margin-bottom:15px;
-font-family:'Poppins',sans-serif;
-}
-
-.hero p{
-  max-width:750px;
-  margin:auto;
-  font-size:1.1rem;
-  opacity:.95;
-}
 
 .hero a{
   display:inline-block;
@@ -201,14 +179,114 @@ footer{
 @media(max-width:600px){
   .hero h1{font-size:2rem;}
 }
+	.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #0f172a;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px 40px;
+  z-index: 1000;
+}
+
+.logo {
+  color: #38bdf8;
+  font-weight: 600;
+}
+
+nav a {
+  color: #e5e7eb;
+  margin-left: 24px;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+nav a:hover {
+  color: #38bdf8;
+}
+	.hero {
+  min-height: 100vh;
+  background: linear-gradient(135deg, #020617, #0f172a);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 120px 20px;
+}
+
+.hero h1 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.hero p {
+  max-width: 600px;
+  font-size: 1.1rem;
+  color: #cbd5f5;
+}
+	section {
+  padding: 80px 20px;
+}
+
+section h2 {
+  text-align: center;
+  font-size: 2rem;
+  color: #0f172a;
+  margin-bottom: 20px;
+}
+
+.about {
+  max-width: 800px;
+  margin: auto;
+  font-size: 1rem;
+  line-height: 1.8;
+  color: #334155;
+}
+	@media (max-width: 768px) {
+  nav {
+    display: none;
+  }
+
+  .hero h1 {
+    font-size: 2.2rem;
+  }
+
+  .hero p {
+    font-size: 1rem;
+  }
+
+  section {
+    padding: 60px 16px;
+  }
+	}
+
+.foto {
+  width: 160px;
+  height: 160px;
+  border-radius:50%;
+  object-fit: cover;
+  margin-bottom:20px;
+  border: 3px solid #38bdf8;
+}
 </style>
 </head>
 
 <body>
-
+<header class="header">
+  <h1 class="logo">Arielle</h1>
+  <nav>
+    <a href="#sobre">Sobre</a>
+    <a href="#formacao">Formação</a>
+    <a href="#contato">Contato</a>
+  </nav>
+</header>
 
 <div class="hero">
-  <img src="imagens\eu.jpg" alt="Foto" class="avatar">
+  <img src="imagens/eu.jpg" alt="Foto" >
   <h1>Desenvolvedora Web</h1>
   <p>
     Sites, landing pages e sistemas web modernos, responsivos
@@ -218,15 +296,14 @@ footer{
 </div>
 
 
-<section id="sobre">
-  <h2>Sobre Mim</h2>
+
+ <section id="sobre">Sobre Mim</section>
   <p class="about">
    Desenvolvo sites responsivos, landing pages e sistemas web com foco em performance, usabilidade e estética moderna, utilizando tecnologias como HTML, CSS, JavaScript, PHP, WordPress (com Elementor), além de integração com APIs REST e noções de frameworks.
   </p>
 </section>
 	
-<section id="formacao">
- <h2>Formação</h2>
+ <section id="formacao">Formação</section>
   <p class="about">
    Técnico em informática para internet(2019)<br>
 	Pacote office(Intermediario)<br>
@@ -235,13 +312,12 @@ footer{
   </p>
 </section>
 
-<section >
-  <h2>Projetos em Destaque</h2>
+ <section id="projetos">Projetos em Destaques</section>
 
   <div class="projects">
  <div class="project-card">
       <div class="project-img">
-        <img src="imagens\xo.jpg" alt="Site Soromix">
+        <img src="imagens/xo.jpg" alt="Site Soromix">
       </div>
       <div class="project-content">
         <h3>Soromix</h3>
@@ -254,7 +330,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="imagens\cursos.jpg"  alt="Pro Inclusão">
+        <img src="imagens/cursos.jpg"  alt="Pro Inclusão">
       </div>
       <div class="project-content">
         <h3>Pro Inclusão</h3>
@@ -266,7 +342,7 @@ footer{
     </div>
  <div class="project-card">
       <div class="project-img">
-        <img src="imagens\inves.jpg" alt="Vanarts Decor">
+        <img src="imagens/inves.jpg" alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Tibi Investimentos</h3>
@@ -278,7 +354,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="imagens\var.jpg" alt="Vanarts Decor">
+        <img src="imagens/var.jpg" alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Vanarts Decor</h3>
@@ -290,7 +366,7 @@ footer{
     </div>
     <div class="project-card">
       <div class="project-img">
-        <img src="imagens\loja.jpg" alt="Loja">
+        <img src="imagens/loja.jpg" alt="Loja">
       </div>
       <div class="project-content">
         <h3>Loja feminina</h3>
@@ -323,6 +399,7 @@ footer{
 
 </body>
 </html>
+
 
 
 
