--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-
 <style>
 
 	
@@ -149,19 +147,20 @@ section h2{
 }
 
 
-.cta{
-  background:var(--primary);
-  color:#fff;
-  text-align:center;
-  padding:80px 20px;
+.cta {
+  background: #020617;
+  color: #ffffff;
+  text-align: center;
+  padding: 80px 20px;
 }
 
 .cta a{
+	
   display:inline-block;
   margin-top:25px;
   padding:14px 36px;
-  background:#fff;
-  color:#000;
+  background:#38bdf8;
+  color:#020617;
   border-radius:30px;
   font-weight:600;
   text-decoration:none;
@@ -399,6 +398,7 @@ section h2 {
 
 </body>
 </html>
+
 
 
 
