--- a/index.html
+++ b/index.html
@@ -148,19 +148,18 @@ section h2{
 
 
 .cta {
-  background: #020617;
-  color: #ffffff;
-  text-align: center;
-  padding: 80px 20px;
+  background:var(--primary);
+  color:#fff;
+  text-align:center;
+  padding:80px 20px;
 }
 
 .cta a{
-	
   display:inline-block;
   margin-top:25px;
   padding:14px 36px;
-  background:#38bdf8;
-  color:#020617;
+  background:#fff;
+  color:#000;
   border-radius:30px;
   font-weight:600;
   text-decoration:none;
@@ -398,6 +397,7 @@ section h2 {
 
 </body>
 </html>
+
 
 
 
