--- a/index.html
+++ b/index.html
@@ -148,18 +148,19 @@ section h2{
 
 
 .cta {
-  background:var(--primary);
-  color:#fff;
-  text-align:center;
-  padding:80px 20px;
+  background: #020617;
+  color: #ffffff;
+  text-align: center;
+  padding: 80px 20px;
+}
 }
 
 .cta a{
   display:inline-block;
   margin-top:25px;
   padding:14px 36px;
-  background:#fff;
-  color:#000;
+  background:#38bdf8;
+  color:#020617;
   border-radius:30px;
   font-weight:600;
   text-decoration:none;
@@ -177,18 +178,6 @@ footer{
 @media(max-width:600px){
   .hero h1{font-size:2rem;}
 }
-	.header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background: #0f172a;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px 40px;
-  z-index: 1000;
-}
-
 .logo {
   color: #38bdf8;
   font-weight: 600;
@@ -274,14 +263,7 @@ section h2 {
 </head>
 
 <body>
-<header class="header">
-  <h1 class="logo">Arielle</h1>
-  <nav>
-    <a href="#sobre">Sobre</a>
-    <a href="#formacao">Formação</a>
-    <a href="#contato">Contato</a>
-  </nav>
-</header>
+
 
 <div class="hero">
   <img src="imagens/eu.jpg" alt="Foto" >
@@ -397,6 +379,7 @@ section h2 {
 
 </body>
 </html>
+
 
 
 
