--- a/index.html
+++ b/index.html
@@ -193,28 +193,6 @@ nav a {
 nav a:hover {
   color: #38bdf8;
 }
-	.hero {
-  min-height: 100vh;
-  background: linear-gradient(135deg, #020617, #0f172a);
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 120px 20px;
-}
-
-.hero h1 {
-  font-size: 3rem;
-  font-weight: 700;
-}
-
-.hero p {
-  max-width: 600px;
-  font-size: 1.1rem;
-  color: #cbd5f5;
-}
 	section {
   padding: 80px 20px;
 }
@@ -270,22 +248,26 @@ section h2 {
 
 
 
- <section id="sobre">Sobre Mim</section>
+ <section >
+	<h2> Sobre Mim</h2>
   <p class="about">
    Desenvolvo sites responsivos, landing pages e sistemas web com foco em performance, usabilidade e estética moderna, utilizando tecnologias como HTML, CSS, JavaScript, PHP, WordPress (com Elementor), além de integração com APIs REST e noções de frameworks.
   </p>
-
+</section>
 	
- <section id="formacao">Formação</section>
+ <section>
+	 <h2>Formação</h2>Formação
   <p class="about">
    Técnico em informática para internet(2019)<br>
 	Pacote office(Intermediario)<br>
 	Técnico em computação grafica(2024)<br>
 	Desenvolvimento mobile(andamento)
   </p>
+</section>
 
-
- <section id="projetos">Projetos em Destaques</section>
+ <section>
+	  <h2>Projetos em Destaques</h2>
+ </section>
 
   <div class="projects">
  <div class="project-card">
@@ -372,6 +354,7 @@ section h2 {
 
 </body>
 </html>
+
 
 
 
