--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@ footer{
   padding:25px;
   font-size:.9rem;
 }
+	@media(max-width:600px){
+  .hero h1{font-size:2rem;}
+}
 
 </style>
 </head>
@@ -299,6 +302,7 @@ footer{
 
 </body>
 </html>
+
 
 
 
