--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	
+<style>	
 .titulo-container {
   display: flex;
   align-items: center;
@@ -299,6 +299,7 @@ footer{
 
 </body>
 </html>
+
 
 
 
