--- a/index.html
+++ b/index.html
@@ -49,7 +49,25 @@
 body{
  padding-top:80px;
 }
+.hero{
+  background:linear-gradient(rgba(0,0,0,25),rgba(0,0,0,25)),
+  url("img/hero.jpg") center/cover no-repeat;
+  color:#fff;
+  padding:100px 20px;
+  text-align:center;
+}
 
+.hero h1{
+  font-size:2.8rem;
+  margin-bottom:15px;
+}
+
+.hero p{
+  max-width:750px;
+  margin:auto;
+  font-size:1.1rem;
+  opacity:.95;
+}
 
 .hero a{
   display:inline-block;
@@ -201,7 +219,7 @@ footer{
 </section>
 	
  <section>
-	 <h2>Formação</h2>Formação
+	 <h2>Formação</h2>
   <p class="about">
    Técnico em informática para internet(2019)<br>
 	Pacote office(Intermediario)<br>
@@ -299,6 +317,7 @@ footer{
 
 </body>
 </html>
+
 
 
 
