--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>	
+
+<style>
 .titulo-container {
   display: flex;
   align-items: center;
@@ -47,8 +49,11 @@
 }
 
 body{
- padding-top:80px;
+  background:#fff;
+  color:var(--dark);
 }
+
+
 .hero{
   background:linear-gradient(rgba(0,0,0,25),rgba(0,0,0,25)),
   url("img/hero.jpg") center/cover no-repeat;
@@ -162,12 +167,12 @@ section h2{
 }
 
 
-.cta {
+.cta{
   background: #020617;
   color: #ffffff;
   text-align: center;
   padding: 80px 20px;
-}
+
 }
 
 .cta a{
@@ -189,10 +194,10 @@ footer{
   padding:25px;
   font-size:.9rem;
 }
-	@media(max-width:600px){
+
+@media(max-width:600px){
   .hero h1{font-size:2rem;}
 }
-
 </style>
 </head>
 
@@ -200,7 +205,7 @@ footer{
 
 
 <div class="hero">
-  <img src="imagens/eu.jpg" alt="Foto" >
+  <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\eu.jpg" alt="Foto" class="avatar">
   <h1>Desenvolvedora Web</h1>
   <p>
     Sites, landing pages e sistemas web modernos, responsivos
@@ -210,16 +215,12 @@ footer{
 </div>
 
 
-
- <section >
-	<h2> Sobre Mim</h2>
+<section>
+  <h2>Sobre Mim</h2>
   <p class="about">
    Desenvolvo sites responsivos, landing pages e sistemas web com foco em performance, usabilidade e estética moderna, utilizando tecnologias como HTML, CSS, JavaScript, PHP, WordPress (com Elementor), além de integração com APIs REST e noções de frameworks.
   </p>
-</section>
-	
- <section>
-	 <h2>Formação</h2>
+ <h2>Formação</h2>
   <p class="about">
    Técnico em informática para internet(2019)<br>
 	Pacote office(Intermediario)<br>
@@ -228,14 +229,14 @@ footer{
   </p>
 </section>
 
- <section>
-	  <h2>Projetos em Destaques</h2>
- </section>
+<section>
+  <h2>Projetos em Destaque</h2>
 
   <div class="projects">
- <div class="project-card">
+
+    <div class="project-card">
       <div class="project-img">
-        <img src="imagens/xo.jpg" alt="Site Soromix">
+        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\xo.jpg"alt="Site Soromix">
       </div>
       <div class="project-content">
         <h3>Soromix</h3>
@@ -248,7 +249,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="imagens/cursos.jpg"  alt="Pro Inclusão">
+        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\cursos.jpg"  alt="Pro Inclusão">
       </div>
       <div class="project-content">
         <h3>Pro Inclusão</h3>
@@ -260,7 +261,7 @@ footer{
     </div>
  <div class="project-card">
       <div class="project-img">
-        <img src="imagens/inves.jpg" alt="Vanarts Decor">
+        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\inves.jpg"alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Tibi Investimentos</h3>
@@ -272,7 +273,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="imagens/var.jpg" alt="Vanarts Decor">
+        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\var.jpg" alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Vanarts Decor</h3>
@@ -284,7 +285,7 @@ footer{
     </div>
     <div class="project-card">
       <div class="project-img">
-        <img src="imagens/loja.jpg" alt="Loja">
+        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\loja.jpg" alt="Loja">
       </div>
       <div class="project-content">
         <h3>Loja feminina</h3>
@@ -317,19 +318,3 @@ footer{
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
