--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   --gray:#666;
 }
 
-*{
+{
   margin:0;
   padding:0;
   box-sizing:border-box;
@@ -205,7 +205,7 @@ footer{
 
 
 <div class="hero">
-  <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\eu.jpg" alt="Foto" class="avatar">
+  <img src="imagens\eu.jpg" alt="Foto" class="avatar">
   <h1>Desenvolvedora Web</h1>
   <p>
     Sites, landing pages e sistemas web modernos, responsivos
@@ -236,7 +236,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\xo.jpg"alt="Site Soromix">
+        <img src="imagens\xo.jpg"alt="Site Soromix">
       </div>
       <div class="project-content">
         <h3>Soromix</h3>
@@ -249,7 +249,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\cursos.jpg"  alt="Pro Inclusão">
+        <img src="imagens\cursos.jpg"  alt="Pro Inclusão">
       </div>
       <div class="project-content">
         <h3>Pro Inclusão</h3>
@@ -261,7 +261,7 @@ footer{
     </div>
  <div class="project-card">
       <div class="project-img">
-        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\inves.jpg"alt="Vanarts Decor">
+        <img src="imagens\inves.jpg"alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Tibi Investimentos</h3>
@@ -273,7 +273,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\var.jpg" alt="Vanarts Decor">
+        <img src="imagens\var.jpg" alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Vanarts Decor</h3>
@@ -285,7 +285,7 @@ footer{
     </div>
     <div class="project-card">
       <div class="project-img">
-        <img src="C:\Users\ariel\OneDrive\Área de Trabalho\curriculo\imagens\loja.jpg" alt="Loja">
+        <img src="imagens\loja.jpg" alt="Loja">
       </div>
       <div class="project-content">
         <h3>Loja feminina</h3>
@@ -318,3 +318,4 @@ footer{
 
 </body>
 </html>
+
