--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@ section h2{
 
 
 .cta{
-  background: #020617;
-  color: #ffffff;
+  background: #f1f5f9;
+  color: #0f172a;
   text-align: center;
   padding: 80px 20px;
 
@@ -179,8 +179,8 @@ section h2{
   display:inline-block;
   margin-top:25px;
   padding:14px 36px;
-  background:#38bdf8;
-  color:#020617;
+  background:#0f172a;
+  color:#ffffff;
   border-radius:30px;
   font-weight:600;
   text-decoration:none;
@@ -261,7 +261,7 @@ footer{
     </div>
  <div class="project-card">
       <div class="project-img">
-        <img src="imagens\inves.jpg"alt="Vanarts Decor">
+        <img src="imagens/inves.jpg"alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Tibi Investimentos</h3>
@@ -273,7 +273,7 @@ footer{
 
     <div class="project-card">
       <div class="project-img">
-        <img src="imagens\var.jpg" alt="Vanarts Decor">
+        <img src="imagens/var.jpg" alt="Vanarts Decor">
       </div>
       <div class="project-content">
         <h3>Vanarts Decor</h3>
@@ -285,7 +285,7 @@ footer{
     </div>
     <div class="project-card">
       <div class="project-img">
-        <img src="imagens\loja.jpg" alt="Loja">
+        <img src="imagens/loja.jpg" alt="Loja">
       </div>
       <div class="project-content">
         <h3>Loja feminina</h3>
@@ -318,4 +318,5 @@ footer{
 
 </body>
 </html>
+
 
